--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
-
-
 </head>
 
 <body>
-
-    <header class="topbar">
+    <header class="header">
         <div class="container">
 
+            <!-- HEADER TOPBAR -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">NobodyFools</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-        
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
@@ -42,17 +41,47 @@
                             <a class="nav-link" href="#">Archived News</a>
                         </li>
                     </ul>
-                    <!-- <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form> -->
                 </div>
             </nav>
+            
+            <!-- HEADER NAV MENU -->
+            <ul class="nav justify-content-left flex-column flex-lg-row">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">home page</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">style demo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">full width</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link">Dropdown</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">link next</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">long link next</a>
+                </li>
+            </ul>
+
+            <!-- LOGO AND SEACH FORM -->
+            <nav class="navbar navbar-light">
+                <a class="navbar-brand" style="font-size: 36px;">NobodyFools</a>
+                <form class="form-inline">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search Our Website..." aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0 bg-primary" type="submit" style="color: white;">Search</button>
+                </form>
+              </nav>
         </div>
     </header>
-
-
-
 
 
 
