--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 </head>
 
 <body>
+
+                <!-- HEADER -->
     <header class="header">
         <div class="container">
 
             <!-- HEADER TOPBAR -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">NobodyFools</a>
+                <a class="navbar-brand" href="#">NF</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -43,7 +45,7 @@
                     </ul>
                 </div>
             </nav>
-            
+
             <!-- HEADER NAV MENU -->
             <ul class="nav justify-content-left flex-column flex-lg-row">
                 <li class="nav-item">
@@ -76,12 +78,64 @@
             <nav class="navbar navbar-light">
                 <a class="navbar-brand" style="font-size: 36px;">NobodyFools</a>
                 <form class="form-inline">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Search Our Website..." aria-label="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0 bg-primary" type="submit" style="color: white;">Search</button>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search Our Website..."
+                        aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0 bg-primary" type="submit"
+                        style="color: white;">Search</button>
                 </form>
-              </nav>
+            </nav>
         </div>
     </header>
+                <!-- SLIDER -->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <h1 id="fcol">Your title can be long and descriptive</h1>
+                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis possimus, commodi magnam quidem quasi temporibus a blanditiis natus ipsum ipsam aliquid. Esse, placeat. Odio laboriosam magni eveniet inventore, alias pariatur?</p>
+                    <button type="button" class="btn btn-primary">Read more</button>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="/img/img1.jpg" class="d-block w-100" alt="img1">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/img/img2.jpg" class="d-block w-100" alt="img2">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/img/img3.jpg" class="d-block w-100" alt="img3">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/img/img4.jpg" class="d-block w-100" alt="img4">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
 
 
