a few changes in css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-                <!-- HEADER -->
+    <!-- HEADER -->
     <header class="header">
         <div class="container">
 
@@ -86,16 +86,19 @@
             </nav>
         </div>
     </header>
-                <!-- SLIDER -->
+
+    <!-- SLIDER -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="col-lg-6">
                     <h1 id="fcol">Your title can be long and descriptive</h1>
-                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis possimus, commodi magnam quidem quasi temporibus a blanditiis natus ipsum ipsam aliquid. Esse, placeat. Odio laboriosam magni eveniet inventore, alias pariatur?</p>
+                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis possimus, commodi
+                        magnam quidem quasi temporibus a blanditiis natus ipsum ipsam aliquid. Esse, placeat. Odio
+                        laboriosam magni eveniet inventore, alias pariatur?</p>
                     <button type="button" class="btn btn-primary">Read more</button>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="col-lg-6">
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -133,7 +136,51 @@
         </div>
     </div>
 
+    <!-- INTRO POSTS -->
+    <div class="grid-post">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <img src="/img/sm-img1.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <img src="/img/sm-img2.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!-- SHOUT -->
+    <div class="shout">
+        <div class="container">
+            <div class="jumbotron">
+                <h1 class="display-4">Lorem ipsum dolor sit amet consectetur!</h1>
+                <p class="lead">Why not try our services today, you won’t regret your choice !</p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">CONTACT US TODAY</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- PRE-FOOTER -->
+    <footer class="pre-footer">
+        <div class="container">
+            
+        </div>
+    </footer>
 
 
 
