--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="https://kit.fontawesome.com/4095dc4ef7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -175,10 +176,21 @@
         </div>
     </div>
 
-    <!-- PRE-FOOTER -->
-    <footer class="pre-footer">
+    <!--FOOTER -->
+    <footer class="footer">
         <div class="container">
-            
+            <div class="d-sm-flex justify-content-between">
+                <div class="footer-left">
+                    <a href="#">Terms and conditions</a>
+                    <a href="#">Privacy</a>
+                </div>
+                <div class="footer-right">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="#"><i class="fab fa-google-plus"></i></a>
+                </div>
+            </div>
         </div>
     </footer>
 
